--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,54 @@
 
+body {
+font-family: 'Abel', sans-serif;
+font-size: 20px;
+background-color: white;
+width: 960px;
+margin: auto;
+text-align: center;
+}
+
+nav {
+  font-size: 25px;
+  margin: 20px;
+  padding: 20px;
+  text-align: center;
+}
+
+#navigation li {
+  display: inline;
+  padding: 10px;
+  font-size: 25px;
+}
+
+h1 {
+  text-align: center;
+}
+span {
+  font-family: 'Kalam', cursive;
+  font-size: 60px;
+  display: block;
+}
+
+#bigfish {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 70px;
+}
+
+header {
+  padding: 10px;
+  margin: 20px;
+}
+
+h2 {
+  font-size: 40px;
+  text-align: center;
+}
+
+#family {
+float: left;
+}
 
 
