--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,42 @@
 
+
 body {
+background-color: white;
+color: rgb(53, 35, 23);
 font-family: 'Abel', sans-serif;
 font-size: 20px;
-background-color: white;
 width: 960px;
 margin: auto;
 text-align: center;
+padding-bottom: 100px;
 }
 
 nav {
   font-size: 25px;
   margin: 20px;
-  padding: 20px;
+  padding: 10px;
   text-align: center;
-}
+  }
 
-#navigation li {
+nav li {
   display: inline;
   padding: 10px;
   font-size: 25px;
+}
+
+nav a:link {
+  text-decoration: none;
+  color: rgb(53, 35, 23);
+}
+
+nav a:hover {
+  color: rgb(41, 23, 11);
+  background-color: rgb(250, 234, 164);
+}
+
+nav a:visited {
+  color: rgb(53, 35, 23);;
+  text-decoration: none;
 }
 
 h1 {
@@ -34,21 +52,80 @@ span {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  padding-bottom: 70px;
+  padding-bottom: 30px;
 }
 
 header {
   padding: 10px;
-  margin: 20px;
+  margin: 10px;
 }
 
 h2 {
   font-size: 40px;
   text-align: center;
+  padding-top: 10px;
+}
+
+h3 {
+  font-size: 30px;
 }
 
 #family {
 float: left;
+border: 3px, solid, white;
+margin-right: 30px;
+margin-bottom: 20px;
 }
 
+#about {
+text-align: justify;
+padding: 50px, 0px, 0px, 50px;;
 
+}
+
+#cookie {
+  float: right;
+  margin-right: 10px;
+}
+
+#cutter {
+  float: right;
+  margin-bottom: 50px;
+}
+
+li{
+text-align: left;
+list-style-type: none;
+}
+
+#menusection p {
+  text-align: left;
+  margin-left: 38px;
+  font-weight: bold;
+}
+
+hr {
+  margin: 50px;
+}
+
+table {
+  color: rgb(53, 35, 23);
+  padding-bottom: 120px;
+}
+
+th, td {
+  padding: 10px;
+}
+
+th {
+  border-bottom: 1px solid rgb(53, 35, 23);
+  font-weight: bold;
+}
+
+tr.even {
+  background-color: efefef;
+}
+
+td:hover {
+  background-color: rgb(250, 234, 164);
+}
