--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ padding-bottom: 100px;
 }
 
 nav {
-  font-size: 25px;
+  font-size: 20px;
   margin: 20px;
   padding: 10px;
   text-align: center;
@@ -21,12 +21,13 @@ nav {
 nav li {
   display: inline;
   padding: 10px;
-  font-size: 25px;
+  font-size: 20px;
 }
 
 nav a:link {
   text-decoration: none;
   color: rgb(53, 35, 23);
+  padding: 10px;
 }
 
 nav a:hover {
@@ -128,4 +129,20 @@ tr.even {
 
 td:hover {
   background-color: rgb(250, 234, 164);
+}
+
+form {
+  margin: auto;
+  line-height: 2;
+}
+
+fieldset {
+  text-align: left;
+  margin-bottom: 60px;
+}
+
+button {
+  font-size: 20px;
+  margin: 15px;
+  padding: 5px;
 }
